component-library/components/left-right/left-right.scss
.left-right {
    display: flex;
    align-items: center;
    overflow: hidden;

  .left-right__wrapper {
    width: 100%;
    max-width: 1280px;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    gap: 2rem;
    padding-block: 24px;
    padding-inline: 32px;
  }
  .left-right__wrapper picture, .left-right__wrapper img {
    width: 100%;
    max-width: 500px;
    display: inline-flex;
  }
  @media only screen and (min-width: 768px) {
    .left-right__wrapper {
      flex-direction: row;
      gap: 4rem;
      padding-block: 48px;
    }
  }
  @media only screen and (min-width: 1024px) {
    .left-right__wrapper {
      padding-block: 48px;
      gap: 10rem;
    }
  }

  .left-right__wrapper picture, .left-right__wrapper img {
    margin-top: 32px;
  }

  h2 {
    max-width: 620px;
    margin-block: 30px;
  }
}

